<resources>
    <string name="app_name">MultimediaTestTool</string>
    <string name="playback_title">Playback Test</string>
    <string name="recording_title">Recording Test</string>
    <string name="voice_call_title">VoiceCall Test</string>
    <string name="Detail">Detail</string>
    <string name="ClearResults">ClearResults</string>

    <string name="Question">Please Choose All Passed Devices ?</string>
    <string name="Speaker">Speaker</string>
    <string name="Headset">Headset</string>
    <string name="Bluetooth">A2DP</string>
    <string name="Commit">Commit Test Result</string>

    <string name="Question_Recording">Please Choose All Passed Devices ?</string>
    <string name="Start_Recording">Start Recording</string>
    <string name="Stop_Recording">Stop Recording</string>
    <string name="Start_play_Recording">Start Play Recording</string>
    <string name="Stop_play_recording">Stop Play Recording</string>
    <string name="BuiltIn_Mic">BuiltIn Mics</string>
    <string name="Headset_Mic">Headset Mic</string>
    <string name="onRecording"> --- Under Recording --- </string>
    <string name="onReady"> --- Ready --- </string>
    <string name="onPlaying"> --- Under Playing Recording Voice --- </string>


    <string name="hint_for_call_number">please input phone number here !</string>
    <string name="dail_out">Dial Out</string>
    <string name="Receiver">Earpiece</string>
    <string name="BTSCO">BT SCO</string>
    <string name="testTips">Please switch output devices during phone call</string>

    <string name="voip_call_title">Voip Test</string>
    <string name="hint_for_voip_call">Please input contact name</string>

    <string name="video_test_title">Video playback test</string>
    <string name="video_test_dialog">Video Test Confirm</string>
    <string name="video_test_message">Vdieo Playback ok ?</string>
    <string name="video_yes">Yes</string>
    <string name="video_no">No</string>

    <string name="video_recording_title">Video Recording test</string>
    <string name="startVideoRecording">Start Camcorder</string>
    <string name="startVideoPlayback">Play VideoRecording</string>
    <string name="video_recording_test_dialog">VideoRecording Confirm</string>
    <string name="video_recording_test_message">Camcorder ok ?</string>

</resources>
